components/policies/pod-security-standards/baseline/ban-host-process/test/deployment-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
        - name: container02
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        windowsOptions:
          hostProcess: true
      containers:
        - name: container01
          image: dummyimagename
---
