components/policies/pod-security-standards/baseline/ban-host-process/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob02
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob03
spec:
  template:
    spec:
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob04
spec:
  template:
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob05
spec:
  template:
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: false
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob06
spec:
  template:
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: false
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            windowsOptions:
              hostProcess: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob07
spec:
  template:
    spec:
      securityContext:
        windowsOptions:
          hostProcess: false
      containers:
        - name: container01
          image: dummyimagename
---
