components/policies/pod-security-standards/baseline/ban-host-process/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
    - name: container02
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        windowsOptions:
          hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  securityContext:
    windowsOptions:
      hostProcess: true
  containers:
    - name: container01
      image: dummyimagename
---
